--- a/themes/custom-theme/layouts/_default/list.html
+++ b/themes/custom-theme/layouts/_default/list.html
@@ -2,4 +2,13 @@
     <div class="content">
         {{.Content}}
     </div>
+    <h2 class="title is-2">Posts</h2>
+    <ul>
+    <!-- Ranges through content/posts/*.md -->
+    {{ range .Pages }}
+        <li>
+            <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
+        </li>
+    {{ end }}
+    </ul>
 {{ end }}
