Use custom font Libre Baskerville

--- a/themes/custom-theme/assets/sass/bulma-custom.sass
+++ b/themes/custom-theme/assets/sass/bulma-custom.sass
@@ -1,4 +1,5 @@
 
-$body-line-height: 1.25
+$body-line-height: 1.5
+$family-sans-serif: 'Libre Baskerville', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 @import 'bulma/bulma'
 
