--- a/themes/custom-theme/layouts/partials/head.html
+++ b/themes/custom-theme/layouts/partials/head.html
@@ -1,5 +1,8 @@
 {{ $sass := resources.Get "sass/bulma-custom.sass" }}
 {{ $style := $sass | resources.ToCSS | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <script data-goatcounter="https://flicksfixcounter.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
