Justify text and add margin top to header

--- a/themes/custom-theme/layouts/_default/single.html
+++ b/themes/custom-theme/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <section id="main">
   <h1 class="title is-2">{{ .Title }}</h1>
   <div>
-        <article class="content">
+        <article class="content has-text-justified">
            {{ .Content }}
         </article>
   </div>
