--- a/themes/custom-theme/layouts/partials/header.html
+++ b/themes/custom-theme/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<h2 class="title is-2 block has-text-centered"><a class="is-hovered has-text-black" href="/">Marcin "Gordon" Gordziejewski</a></h2>
+<h2 class="title is-2 block has-text-centered mt-6"><a class="is-hovered has-text-black" href="/">Marcin "Gordon" Gordziejewski</a></h2>
 <h2 class="subtitle is-4 has-text-centered">{{ .Site.Title }}</h2>
 <nav>
     <ul class="columns">
