--- a/themes/custom-theme/layouts/_default/list.html
+++ b/themes/custom-theme/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="content">
+    <div class="content has-text-justified">
         {{.Content}}
     </div>
     {{ if gt (len .Pages) 0}}
