Add projects page with GitHub projects in it

--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -1,3 +1,1 @@
-{{ define "main" }}
-        <h3 class="title is-4 mt-4">Latest Posts</h3>
-{{ end }}
+{{ with .GetPage "/about" }}{{.Render}}{{end}}
