--- a/themes/custom-theme/assets/sass/bulma-custom.sass
+++ b/themes/custom-theme/assets/sass/bulma-custom.sass
@@ -3,3 +3,9 @@ $body-line-height: 1.5
 $family-sans-serif: 'Libre Baskerville', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 @import 'bulma/bulma'
 
+@media print
+  .is-hidden-print
+    display: none !important
+
+
+
