Add draft for living in the IDE

--- a/themes/custom-theme/layouts/_default/baseof.html
+++ b/themes/custom-theme/layouts/_default/baseof.html
@@ -35,7 +35,7 @@
     <div class="is-hidden-print">
       {{ block "header" . }}{{ partial "header.html" .}}{{ end }}
     </div>
-    <main role="main" class="container is-widescreen">
+    <main role="main" class="container pl-4 pr-4">
       {{ block "main" . }}{{ end }}
     </main>
     <hr/>
