--- a/themes/custom-theme/layouts/partials/head.html
+++ b/themes/custom-theme/layouts/partials/head.html
@@ -6,3 +6,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <script data-goatcounter="https://flicksfixcounter.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
+<script src="//unpkg.com/mermaid@8.11.4/dist/mermaid.min.js"></script>
+<script>mermaid.initialize({ 
+        startOnLoad: true, 
+        securityLevel: 'loose', 
+        theme: 'base', 
+        themeVariables: {
+                fontFamily: "monospace"
+        }
+});</script>
